Prepare test environment

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.12.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.0"
+    "@openzeppelin/contracts": "^4.7.0",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
