--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "hardhat": "^2.12.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.0",
+    "dotenv": "^16.0.3",
     "hardhat-gas-reporter": "^1.0.9"
   }
 }
